// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/ErrorMessage default 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c2 {
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="errorMessage"
  >
    <p
      className="c2"
      data-test-id={0}
    >
      Error Message
    </p>
  </div>
  <div
    className="c3"
  />
</div>
`;

exports[`Storyshots @components/atoms/ErrorMessage with multiple errors 1`] = `
.c0 {
  position: relative;
  margin: 20px;
}

.c3 {
  position: absolute;
  width: 100%;
  height: 100%;
  border: 3px solid rgba(0,0,0,0.2);
  top: 0;
  left: 0;
  pointer-events: none;
  box-sizing: border-box;
}

.c1 {
  color: #c22d74;
  font-size: 0.75rem;
}

.c2 {
  margin: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    data-test="errorMessage"
  >
    <p
      className="c2"
      data-test-id={0}
    >
      Error Message
    </p>
    <p
      className="c2"
      data-test-id={1}
    >
      Error Message
    </p>
  </div>
  <div
    className="c3"
  />
</div>
`;
